Name:           dalvik
Version:        0.1
Cabal-Version:  >= 1.2
Build-Type:     Simple
License:        BSD3
License-File:   LICENSE
Copyright:      LICENSE
Author:         Aaron Tomb <aarontomb@gmail.com>
Maintainer:     aarontomb@gmail.com
Stability:      experimental
Synopsis:       Parser for the Dalvik virtual machine's DEX file format
Description:    Parser for the Dalvik virtual machine's DEX file format
Category:       Language

Flag splitBase
    Description: Choose the new smaller, split-up base package.

Library
    Extensions:

    Build-Depends:  array,
                    base >= 3,
                    bytestring,
                    cereal,
                    containers,
                    floatshow,
                    text,
                    text-format

    Hs-Source-Dirs: .
    Exposed-Modules: Dalvik.AccessFlags
                     Dalvik.HexPrint
                     Dalvik.Instruction
                     Dalvik.LEB128
                     Dalvik.Parser
                     Dalvik.Printer
                     Dalvik.Types
    Other-Modules:
    GHC-Options: -Wall -O2
    GHC-Prof-Options: -prof -fprof-auto -fprof-cafs

Executable Dexdumper
    Main-Is: Dexdumper.hs
    GHC-Options: -Wall -O2 -optl-Wl,-dead_strip
    GHC-Prof-Options: -prof -fprof-auto -fprof-cafs
    Build-Depends: utf8-string
